[metadata]
name = bitcoinlib
version = 0.6.15
url = http://github.com/1200wd/bitcoinlib
author = 1200wd
author_email = info@1200wd.com
license= GNU3
description = Bitcoin cryptocurrency Library
long_description = file: README.rst
keywords = bitcoin library cryptocurrency wallet crypto keys segwit transactions blocks
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security :: Cryptography
    Topic :: Office/Business :: Financial :: Accounting

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    requests >= 2.25.0
    fastecdsa >= 2.3.0;platform_system!="Windows"
    ecdsa >= 0.18;platform_system=="Windows"
    pycryptodome >= 3.19.0
    SQLAlchemy >= 2.0.20
    numpy == 1.19.5;python_version<"3.9"
    numpy >= 1.22.0;python_version>="3.9"

[options.extras_require]
dev =
    scrypt >= 0.8.20;platform_system!="Windows"
    sphinx >= 7.1.0
    coveralls >= 4.0.1
    psycopg >= 3.1.16
    mysql-connector-python >= 8.4.0
    mysqlclient >= 2.2.0
    sphinx_rtd_theme >= 2.0.0
    Cython>=3.0.8
    win-unicode-console;platform_system=="Windows"

[options.entry_points]
console_scripts =
    cli-wallet = bitcoinlib.tools.clw:main
    clw = bitcoinlib.tools.clw:main

[coverage:run]
relative_files = True
omit =
    *bitcoinlib/tools/*
    *dashd.py
    *bitcoind.py
    *dogecoind.py
    *bcoin.py
    *litecoind.py
    *authproxy.py
    *cryptoid.py
    *chainso.py
    *litecoreio.py
    *insightdash.py
    *litecoinblockexplorer.py
    *bitflyer.py
[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    if not PY3
