[metadata]
name = bitcoinlib
version = 0.7.5
url = http://github.com/1200wd/bitcoinlib
author = 1200wd
author_email = info@1200wd.com
license= GNU3
description = Bitcoin cryptocurrency Library
long_description = file: README.rst
keywords = bitcoin library cryptocurrency wallet crypto keys segwit transactions blocks
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security :: Cryptography
    Topic :: Office/Business :: Financial :: Accounting

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    requests >= 2.32.0
    fastecdsa >= 3.0.0;platform_system!="Windows"
    ecdsa >= 0.18;platform_system=="Windows"
    pycryptodome >= 3.23.0
    SQLAlchemy >= 2.0.44
    numpy == 1.24.4;python_version<"3.9"
    numpy >= 1.26.0, <2;python_version>="3.9"

[options.extras_require]
dev =
    scrypt >= 0.9.0;platform_system!="Windows"
    sphinx >= 9.0.0;python_version<"3.9"
    sphinx >= 9.0.0;python_version>="3.9"
    psycopg >= 3.3.0
    coveralls >= 4.0.2
    mysql-connector-python >= 9.5.0
    mysqlclient >= 2.2.7
    sphinx_rtd_theme >= 3.0.0
    Cython>=3.2.0
    win-unicode-console;platform_system=="Windows"

[options.entry_points]
console_scripts =
    cli-wallet = bitcoinlib.tools.clw:main
    clw = bitcoinlib.tools.clw:main
